--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,3 +1,31 @@
 page-contact {
+  .session {
+    height: 100%;
+    background-color: #aaa;
 
+    .publisher-stream video {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      width: 40vw;
+      padding: 5px;
+      border: 1px solid #888;
+      border-radius: 5px;
+    }
+
+    .subscribers-stream {
+      ion-badge {
+        position: absolute;
+        top: 10px;
+        left: 5px;
+      }
+
+      video {
+        width: 100%;
+        position: absolute;
+        top: 50%;
+        transform: translate(0, -50%);
+      }
+    }
+  }
 }
