Phase One (EDITS)
Included Pages
 +-- Login
 +-- Register
 +-- Tabs
 | +-- Home
 | +-- My Courses
 | +-- Search
 | +-- Recommended
 | +-- My Account
 | | +-- Change Password
 +-- Course Tutor Detail

Included Components
 +-- login
 | +-- layout-2 (EDITED)
 |   `-- Login, Change Password
 +-- register
 | +-- layout-1
 |   `-- Register
 +-- action-sheet
 | +-- with text header
 |   `-- Home
 +-- tabs
 | +-- footer tab icons (EDITED)
 |   `-- Tabs
 +-- search bar
 | +-- field + header
 |   `-- Search
 +-- list view
 | +-- expandable
 |   +-- list big image
 |     `-- My Courses
 +-- parallax
 |`-elastic header
 |  +-- product
 |    `-- Course Tutor Detail

Features
 +-- LazyLoading all pages
 +-- Spinners while lazyLoading the page

--- a/src/components/login/layout-2/login.html
+++ b/src/components/login/layout-2/login.html
@@ -22,7 +22,8 @@
                 <!---Input field username-->
                 <ion-item transparent>
                     <ion-label stacked>{{data.labelUsername}}</ion-label>
-                    <ion-input required placeholder="{{data.username}}" type="text" [(ngModel)]="username"></ion-input>
+                    <ion-input required placeholder="{{data.username}}" *ngIf="!data.changePassword" type="text" [(ngModel)]="username"></ion-input>
+                    <ion-input required placeholder="{{data.username}}" *ngIf="data.changePassword"  type="password" [(ngModel)]="username"></ion-input>
                     <ion-label error-field color="primary" no-margin *ngIf="!isUsernameValid">{{data.errorUser}}</ion-label>
                 </ion-item>
                 <!---Input field password-->
