--- a/src/components/tabs/layout-2/tabs.html
+++ b/src/components/tabs/layout-2/tabs.html
@@ -1,4 +1,4 @@
 <!-- Theme Tabs Footer tab - icons -->
 <ion-tabs #tabs tabsPlacement='bottom'>
-    <ion-tab [tabIcon]="item.icon" [root]="item.page" *ngFor="let item of data;let i = index"></ion-tab>
+    <ion-tab [tabIcon]="item.icon" [root]="item.page" *ngFor="let item of data;let i = index" (ionSelect)="onEvent('onItemClick', item)"></ion-tab>
 </ion-tabs>
